--- a/styles.css
+++ b/styles.css
@@ -190,7 +190,7 @@ header{
 /* feature-section */
 .feature{
     padding: 80px var(--padding-inline-section) 0;
-    background-image: url(./Images/asset\ 32.svg);
+    background-image: url(./asset\ 32.svg);
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 50px;
