--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ ul{
 /* top banner */
 .top-banner{
     background-color: #e54439;
-    background-image: url('./Images/asset\ 30.png') ;
+    background-image: url('./asset\ 30.png') ;
     background-size: 300px;
 }
 
